--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tecnoclub</title>
+    <title>Static Website with API</title>
 </head>
 <body>
-    <h1>Tecnoclub</h1>
+    <h1>Number: <span id="number">0</span></h1>
+    <button onclick="updateNumber()">Update Number</button>
+
+    <script src="script.js"></script>
 </body>
 </html>
